--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "@mui/x-data-grid": "^6.19.4",
+    "@types/navermaps": "^3.7.10",
     "axios": "^1.6.7",
     "dompurify": "^3.0.9",
     "react": "^18.2.0",
