--- a/package.json
+++ b/package.json
@@ -16,16 +16,21 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.10",
+    "@mui/lab": "^5.0.0-alpha.165",
     "@mui/material": "^5.15.10",
     "@mui/x-data-grid": "^6.19.4",
+    "@mui/x-date-pickers": "^8.4.0",
     "@types/navermaps": "^3.7.10",
     "axios": "^1.6.7",
+    "date-fns": "^4.1.0",
     "dompurify": "^3.0.9",
+    "formik": "^2.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.50.1",
     "react-router-dom": "^6.22.1",
+    "yup": "^1.6.1",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
