--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.50.1",
     "react-router-dom": "^6.22.1",
+    "recharts": "^2.15.3",
     "yup": "^1.6.1",
     "zustand": "^4.5.1"
   },
