--- a/package.json
+++ b/package.json
@@ -7,49 +7,33 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
-    "type-check": "tsc --noEmit",
-    "analyze": "vite build --mode analyze"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.10",
-    "@mui/lab": "^5.0.0-alpha.165",
     "@mui/material": "^5.15.10",
-    "@mui/x-data-grid": "^6.19.4",
-    "@mui/x-date-pickers": "^8.4.0",
-    "@types/navermaps": "^3.7.10",
+    "@mui/x-date-pickers": "^6.19.4",
     "axios": "^1.6.7",
-    "date-fns": "^4.1.0",
-    "dompurify": "^3.0.9",
-    "formik": "^2.4.6",
+    "date-fns": "^3.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.50.1",
     "react-router-dom": "^6.22.1",
-    "recharts": "^2.15.3",
-    "yup": "^1.6.1",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
-    "@types/dompurify": "^3.0.5",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "prettier": "^3.2.5",
-    "rollup-plugin-visualizer": "^5.12.0",
-    "terser": "^5.27.0",
-    "typescript": "^5.3.3",
-    "vite": "^5.1.3",
-    "vite-plugin-compression2": "^0.11.0"
+    "typescript": "^5.2.2",
+    "vite": "^5.1.0"
   }
 }
