--- a/package.json
+++ b/package.json
@@ -13,14 +13,20 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.10",
+    "@mui/lab": "^7.0.0-beta.13",
     "@mui/material": "^5.15.10",
     "@mui/x-date-pickers": "^6.19.4",
+    "antd": "^5.14.1",
     "axios": "^1.6.7",
-    "date-fns": "^3.3.1",
+    "date-fns": "^2.30.0",
+    "formik": "^2.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.50.1",
     "react-router-dom": "^6.22.1",
+    "recharts": "^2.12.0",
+    "yup": "^1.3.3",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
@@ -34,6 +40,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "typescript": "^5.2.2",
-    "vite": "^5.1.0"
+    "vite": "^6.3.5",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
