--- a/.prettierrc
+++ b/.prettierrc
@@ -5,6 +5,5 @@
   "singleQuote": true,
   "trailingComma": "es5",
   "bracketSpacing": true,
-  "arrowParens": "avoid",
-  "endOfLine": "auto"
+  "arrowParens": "avoid"
 } 
