--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.10",
-    "@mui/lab": "^7.0.0-beta.13",
+    "@mui/lab": "^5.0.0-alpha.165",
     "@mui/material": "^5.15.10",
     "@mui/x-date-pickers": "^6.19.4",
-    "antd": "^5.14.1",
     "axios": "^1.6.7",
     "date-fns": "^2.30.0",
     "formik": "^2.4.6",
